test/fails/bad_generics/tags6.lgl
tag a is vec2;
tag b is vec2;
tag c is b;
tag d is b;
tag e is c;

`t low_cast<`t : b>(a x) {
    a->b a_b = [[.5, .5], [1.5, .5]];
    b->`t id = [[1., 0.], [0., 1.]];
    return id * a_b * x;
}

void main() {
    vec2 fail = low_cast<vec2>([1., 2.]);
}